[project]
name = "compwa-github-io"
description = "Source code for the ComPWA Organization pages"
requires-python = "~=3.13.0"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Common Partial Wave Analysis", email = "compwa-admin@ep1.rub.de" }]
maintainers = [{ email = "compwa-admin@ep1.rub.de" }]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Documentation = "https://compwa.github.io"
Issues = "https://github.com/ComPWA/compwa.github.io/issues"
Source = "https://github.com/ComPWA/compwa.github.io"

[dependency-groups]
dev = [
    "ruff",
    { include-group = "doc" },
    { include-group = "jupyter" },
    { include-group = "style" },
    { include-group = "test" },
]
doc = [
    "myst-nb",
    "sphinx",
    "sphinx-api-relink",
    "sphinx-book-theme",
    "sphinx-codeautolink[ipython]",
    "sphinx-comments",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-hep-pdgref",
    "sphinx-pybtex-etal-style",
    "sphinx-remove-toctrees",
    "sphinx-reredirects",
    "sphinx-thebe",
    "sphinx-togglebutton",
    "sphinxcontrib-bibtex>=2.0",
    { include-group = "notebooks" },
]
jupyter = [
    "jupyter-ruff",
    "jupyterlab",
    "jupyterlab-git",
    "jupyterlab-lsp",
    "jupyterlab-myst",
    "jupyterlab-quickopen",
    "python-lsp-ruff",
    "python-lsp-server",
    { include-group = "notebooks" },
]
notebooks = [
    "black",
    "graphviz",
    "ipython",
    "numpy",
    "sympy",
]
style = [
    "attrs",
    "nbformat",
    "ty",
    { include-group = "types" },
]
test = ["jupyter"]
types = [
    "attrs",
    "sphinx-api-relink",
    { include-group = "notebooks" },
]

[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[tool.compwa.policy]
doc-apt-packages = "graphviz"
repo-name = "compwa.github.io"
repo-title = "ComPWA Organization"

[tool.compwa.policy.github]
github-pages = true
no-pypi = true

[tool.compwa.policy.python]
type-checker = ["ty"]

[tool.poe.executor]
isolated = true
no-group = "dev"
type = "uv"

[tool.poe.groups.doc]
heading = "Documentation"

[tool.poe.groups.doc.tasks.doc]
cmd = """
sphinx-build \
    --builder=html \
    --fail-on-warning \
    --keep-going \
    --show-traceback \
    docs/ \
    docs/_build/html/
"""
executor = { group = "doc" }
help = "Build documentation and API"

[tool.poe.groups.doc.tasks.doc.env]
PYTHONWARNINGS = ""
TF_CPP_MIN_LOG_LEVEL = "3"
ZFIT_DISABLE_TF_WARNINGS = "1"

[tool.poe.groups.doc.tasks.doclive]
cmd = """
sphinx-autobuild \
    --builder=html \
    --open-browser \
    --port=0 \
    --re-ignore=/__pycache__(/.*)?$ \
    --re-ignore=/_build(/.*)?$ \
    --re-ignore=/\\.cache(/.*)?$ \
    --re-ignore=/\\.egg-info(/.*)?$ \
    --re-ignore=/\\.ipynb_checkpoints(/.*)?$ \
    --re-ignore=/\\.virtual_documents(/.*)?$ \
    --re-ignore=/api(/.*)?$ \
    --re-ignore=/docs$ \
    --re-ignore=/version\\.py$ \
    --re-ignore=\\.egg-info(/.*)?$ \
    --re-ignore=\\.pkl$ \
    --re-ignore=\\.png$ \
    --re-ignore=\\.svg$ \
    --re-ignore=\\.yml$ \
    docs/ \
    docs/_build/html/
"""
executor = { group = "doc", with = "sphinx-autobuild" }
help = "Set up a server to directly preview changes to the HTML pages"

[tool.poe.groups.doc.tasks.docnb]
env = { EXECUTE_NB = "yes" }
help = "Build documentation and API with cached notebook execution"
sequence = ["doc"]

[tool.poe.groups.doc.tasks.docnb-force]
env = { FORCE_EXECUTE_NB = "yes" }
help = "Build documentation and API with notebook execution (no cache)"
sequence = ["doc"]

[tool.poe.groups.doc.tasks.docnblive]
env = { EXECUTE_NB = "yes" }
help = "Set up a server to directly preview changes to the HTML pages with cached notebook execution"
sequence = ["doclive"]

[tool.poe.groups.doc.tasks.linkcheck]
cmd = """
sphinx-build \
    --builder=linkcheck \
    --show-traceback \
    docs/ \
    docs/_build/linkcheck/
"""
env = { PYTHONWARNINGS = "" }
executor = { group = "doc" }
help = "Check external links in the documentation (requires internet connection)"

[tool.poe.groups.notebook]
heading = "Notebooks"

[tool.poe.groups.notebook.tasks.lab]
args = [{ name = "paths", default = "", positional = true }]
cmd = "jupyter lab ${paths}"
executor = { group = "jupyter" }
help = "Launch Jupyter Lab"

[tool.poe.groups.notebook.tasks.nb]
args = [{ name = "paths", default = "docs", multiple = true, positional = true }]
cmd = "pytest --nbmake --nbmake-timeout=0 ${paths}"
executor = { group = "notebooks", with = "nbmake" }
help = "Run all notebooks"

[tool.poe.tasks.all]
help = "Run all continuous integration (CI) tasks locally"
ignore_fail = "return_non_zero"
sequence = [
    "style",
    "linkcheck",
    "docnb-force",
]

[tool.poe.tasks.style]
cmd = "pre-commit run --all-files"
executor = { group = "style" }
help = "Perform all linting, formatting, and spelling checks"

[tool.poe.tasks.upgrade]
executor = { type = "simple" }
help = "Upgrade lock files"
parallel = ["_upgrade-precommit", "_upgrade-uv"]

[tool.poe.tasks._upgrade-precommit]
cmd = "pre-commit autoupdate -j8"
executor = { type = "simple" }

[tool.poe.tasks._upgrade-uv]
cmd = "uv lock --upgrade"
executor = { type = "simple" }

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--doctest-continue-on-failure",
    "--doctest-modules",
    "--durations=0",
    "--ignore-glob=*/.ipynb_checkpoints/*",
    "--ignore=docs/adr/001/operators.ipynb",
    "--ignore=docs/adr/001/parameter_container.py",
    "--ignore=docs/adr/001/sympy.ipynb",
    "--ignore=docs/conf.py",
    "--nbmake",
    "--nbmake-timeout=0",
]
filterwarnings = [
    "error",
    "ignore:Passing a schema to Validator.iter_errors is deprecated.*:DeprecationWarning",
    "ignore:open_text is deprecated.*:DeprecationWarning",
    "ignore:read_text is deprecated.*:DeprecationWarning",
    "ignore:unclosed .*:ResourceWarning",
]
norecursedirs = [
    ".ipynb_checkpoints",
    ".virtual_documents",
    "_build",
]
testpaths = [
    ".pre-commit",
    "docs",
]

[tool.ruff]
extend-include = ["*.ipynb"]
preview = true
show-fixes = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "ANN401",
    "ARG00",
    "COM812",
    "CPY001",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D213",
    "D407",
    "D416",
    "DOC",
    "E501",
    "FBT",
    "FURB101",
    "FURB103",
    "FURB140",
    "G004",
    "ISC001",
    "PLW1514",
    "PT001",
    "PTH",
    "RUF067",
    "SIM108",
    "SLF001",
]
select = ["ALL"]
task-tags = ["cspell"]

[tool.ruff.lint.flake8-builtins]
ignorelist = ["display"]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-self]
ignore-names = [
    "_latex",
    "_print",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "A003",
    "ANN",
    "B008",
    "B018",
    "C408",
    "C90",
    "D",
    "E303",
    "E402",
    "E703",
    "E741",
    "F404",
    "N802",
    "N803",
    "N806",
    "N807",
    "N815",
    "N816",
    "PLC0415",
    "PLC2401",
    "PLR09",
    "PLR2004",
    "PLW0602",
    "PLW0603",
    "PLW2901",
    "PYI034",
    "RUF001",
    "RUF027",
    "S101",
    "S307",
    "T20",
    "TC00",
]
"**/001/operators.ipynb" = ["E731"]
"**/003.ipynb" = ["B023", "PLC2701"]
"**/009.ipynb" = ["FURB113"]
"**/010.ipynb" = ["FURB113"]
"**/011.ipynb" = ["PLC2701", "PLR6301"]
"**/014.ipynb" = ["PLC2701"]
"**/016.ipynb" = ["PLC2701"]
"**/021.ipynb" = ["I001"]
"**/022.ipynb" = ["PLC2701"]
"**/024.ipynb" = ["E731", "E741", "S307"]
"**/025.ipynb" = ["E731"]
"**/98*.ipynb" = ["E731", "PLR6301"]
"docs/*" = [
    "D",
    "E402",
    "INP001",
    "S101",
    "S113",
    "T201",
]
"docs/conf.py" = [
    "A001",
    "D100",
    "PLC2701",
    "PLW2901",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools]
include-package-data = false

[tool.setuptools_scm]
version_file = "version.py"

[tool.tombi.files]
exclude = ["uv.lock"]

[tool.tombi.format.rules]
indent-width = 4
line-width = 88

[tool.tombi.lint.rules]
key-empty = "off"

[[tool.tombi.schemas]]
root = "tool.compwa.policy"
path = "https://raw.githubusercontent.com/ComPWA/policy/1a1d5e8a13c4f76cee452121b5bafe2286dec2f4/compwa-policy.schema.json"
include = ["pyproject.toml"]

[[tool.ty.overrides]]
include = ["docs/symbolics.ipynb"]
rules.unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = [
    "docs/adr/001/operators.ipynb",
    "docs/adr/001/sympy.ipynb",
    "docs/adr/002/composition.ipynb",
    "docs/adr/002/expr.ipynb",
    "docs/adr/002/function.ipynb",
]
rules.unresolved-import = "ignore"

[[tool.ty.overrides]]
include = ["docs/adr/**/*.ipynb"]
rules.invalid-argument-type = "ignore"
rules.invalid-assignment = "ignore"
rules.invalid-return-type = "ignore"
rules.no-matching-overload = "ignore"
rules.unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = ["docs/adr/002/composition.ipynb"]
rules.call-non-callable = "ignore"
rules.empty-body = "ignore"

[tool.ty.rules]
division-by-zero = "warn"
possibly-missing-import = "warn"
possibly-unresolved-reference = "warn"

[tool.ty.terminal]
error-on-warning = true
