[metadata]
name = compwa-org
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
maintainer_email = compwa-admin@ep1.rub.de
description = Source code for the ComPWA Organization pages
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/ComPWA/compwa-org/issues
    Documentation = https://compwa-org.rtfd.io
    Source = https://github.com/ComPWA/compwa-org
license = GPLv3 or later
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.6, <3.10
install_requires =
    ampform ==0.11.*  # wrapped dynamics classes + K-matrix
    ipympl
    matplotlib
    mpl_interactions
    qrules[viz]
    tensorwaves[jax] >=0.2.1  # extras_require jax
setup_requires =
    setuptools_scm

[options.extras_require]
doc =
    myst-nb >=0.11  # myst_enable_extensions
    nbformat
    pyparsing <3  # https://github.com/ComPWA/compwa-org/runs/4011465343?check_suite_focus=true#step:5:353
    RISE
    Sphinx >=3
    sphinx-book-theme
    sphinx-copybutton
    sphinx-issues
    sphinx-math-dollar
    sphinx-panels
    sphinx-thebe
    sphinx-togglebutton
    sphinxcontrib-bibtex >=2
    sphinxcontrib-hep-pdgref
test =
    jupyter
    jupyter-client <7  # https://stackoverflow.com/a/67062211/13219025
    pytest
    pytest-notebook
    pytest-xdist
format =
    black <21.8*  # https://github.com/tensorflow/tensorflow/issues/51743
    isort
lint =
    flake8
    flake8-blind-except
    flake8-bugbear
    flake8-builtins
    flake8-comprehensions
    flake8-pytest-style
    flake8-rst-docstrings
    flake8-use-fstring
    pep8-naming
    pylint >=2.5, !=2.11.*  # good-names-rgxs, https://github.com/tensorflow/tensorflow/issues/51743
    radon
sty =
    %(format)s
    %(lint)s
    pre-commit >=1.4.0
dev =
    %(doc)s
    %(sty)s
    %(test)s
    aquirdturtle-collapsible-headings
    hide-code
    jupyter-contrib-nbextensions
    jupyter-nbextensions-configurator
    jupyterlab >=3.0.0
    jupyterlab-code-formatter
    pip-tools >=6.1.0  # for extras_require
    sphinx-autobuild
    tox >=1.9  # for skip_install, use_develop
