[metadata]
name = compwa-org
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
maintainer_email = compwa-admin@ep1.rub.de
description = Source code for the ComPWA Organization pages
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/ComPWA/compwa-org/issues
    Documentation = https://compwa-org.rtfd.io
    Source = https://github.com/ComPWA/compwa-org
license = GPLv3 or later
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.7, <3.10
install_requires =
    graphviz
    ipympl
    matplotlib
    mpl-interactions
setup_requires =
    setuptools_scm

[options.extras_require]
doc =
    myst-nb >=0.14  # nb_ configuration prefixes
    Sphinx >=3
    Sphinx <4.4; python_version <"3.8.0"  # https://github.com/ComPWA/compwa-org/runs/4998868790
    sphinx-book-theme
    sphinx-codeautolink[ipython]
    sphinx-comments
    sphinx-copybutton
    sphinx-issues
    sphinx-design
    sphinx-thebe
    sphinx-togglebutton
    sphinxcontrib-bibtex >=2
    sphinxcontrib-hep-pdgref
    sphinxcontrib-needs >=0.2.0  # DataTables support
    sphinxcontrib-plantuml
test =
    jupyter
    nbmake <=1.3.0  # https://github.com/ComPWA/compwa-org/runs/7522064686?check_suite_focus=true#step:3:73
format =
    black
    isort
sty =
    %(format)s
    pre-commit >=1.4.0
dev =
    %(doc)s
    %(sty)s
    %(test)s
    aquirdturtle-collapsible-headings
    jupyterlab >=3.0.0
    jupyterlab-code-formatter
    jupyterlab-myst
    sphinx-autobuild
    tox >=1.9  # for skip_install, use_develop
