[metadata]
name = compwa-org
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
maintainer_email = compwa-admin@ep1.rub.de
description = Source code for the ComPWA Organization pages
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/ComPWA/compwa-org/issues
    Documentation = https://compwa-org.rtfd.io
    Source = https://github.com/ComPWA/compwa-org
license = GPLv3 or later
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.7
install_requires =
    graphviz
    ipympl
    matplotlib
    mpl-interactions
setup_requires =
    setuptools_scm

[options.extras_require]
doc =
    myst-nb >=0.14  # nb_ configuration prefixes
    Sphinx >=3
    sphinx-book-theme
    sphinx-codeautolink[ipython]
    sphinx-comments
    sphinx-copybutton
    sphinx-issues
    sphinx-design
    sphinx-needs
    sphinx-thebe
    sphinx-togglebutton
    sphinxcontrib-bibtex >=2
    sphinxcontrib-hep-pdgref
    sphinxcontrib-plantuml
test =
    jupyter
    nbmake
    nbmake <1.3; python_version=="3.7.*"
format =
    black
lint =
    ruff
sty =
    %(format)s
    %(lint)s
    attrs  # https://github.com/ComPWA/compwa-org/runs/8127821070?check_suite_focus=true#step:5:52
    pre-commit >=1.4.0
jupyter =
    %(doc)s
    jupyter-resource-usage
    jupyterlab
    jupyterlab-code-formatter
    jupyterlab-myst
    ypy-websocket <0.8.3; python_version <"3.8.0"
dev =
    %(doc)s
    %(jupyter)s
    %(sty)s
    %(test)s
    sphinx-autobuild
    tox >=1.9  # for skip_install, use_develop
